--- a/index.html
+++ b/index.html
@@ -222,6 +222,12 @@
                 <div class="data-item"><strong>Longitude:</strong> 86.91° E</div>
                 <div class="data-item"><strong>Elevation:</strong> ~6,685 m</div>
             </div>
+            
+            <div class="data-item">
+                <a href="https://github.com/DrSNO-ANK/LtC/blob/main/README.md" target="_blank" style="color: var(--accent-color); text-decoration: none;">
+                    View GitHub Documentation <i class="fab fa-github"></i>
+                </a>
+            </div>
 
             	<!-- University Logo -->
     		<div style="position: absolute; bottom: 20px; left: 20px;">
