--- a/index.html
+++ b/index.html
@@ -220,13 +220,14 @@
                 <h2>Station Info</h2>
                 <div class="data-item"><strong>Latitude:</strong> 27.97° N</div>
                 <div class="data-item"><strong>Longitude:</strong> 86.91° E</div>
-                <div class="data-item"><strong>Elevation:</strong> ~6,685 m</div>
-            </div>
-            
-            <div class="data-item">
-                <a href="https://github.com/DrSNO-ANK/LtC/blob/main/README.md" target="_blank" style="color: var(--accent-color); text-decoration: none;">
-                    View GitHub Documentation <i class="fab fa-github"></i>
-                </a>
+                <div class="data-item"><strong>Elevation:</strong> ~6,660 m</div>
+                
+                <!-- GitHub Link -->
+                <div class="data-item" style="margin-top: 1rem;">
+                    <a href="https://github.com/DrSNO-ANK/LtC/blob/main/README.md" target="_blank" style="color: var(--accent-color); text-decoration: none;">
+                        View GitHub Documentation <i class="fab fa-github"></i>
+                    </a>
+                </div>
             </div>
 
             	<!-- University Logo -->
