--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <!-- GitHub Link -->
                 <div class="data-item" style="margin-top: 1rem;">
                     <a href="https://github.com/DrSNO-ANK/LtC/blob/main/README.md" target="_blank" style="color: var(--accent-color); text-decoration: none;">
-                        View GitHub Documentation <i class="fab fa-github"></i>
+                        View README <i class="fab fa-github"></i>
                     </a>
                 </div>
             </div>
